resources/sass/components/_modal.scss
@use '~sprucecss/scss/spruce';

.modal-backdrop {
    align-items: start;
    background-color: hsl(230deg 100% 9% / 40%);
    display: none;
    inset: 0;
    justify-content: center;
    position: fixed;
    overflow-y: auto;

    &--visible {
        display: flex;
    }
}

.modal {
    background-color: spruce.color(background);
    border-radius: spruce.$border-radius-lg;
    box-shadow: 0 0.25rem 2rem 0 rgba(74, 104, 179, 0.15);
    margin-block: spruce.spacer(m);
    margin-inline: spruce.spacer(s);
    max-width: 40rem;
    padding: spruce.spacer(m);
    width: 30rem;

    &__title {
        color: spruce.color(secondary);
        font-size: spruce.font-size(h4);
        margin-block: 0;
    }

    &__inner {
        margin-block-start: spruce.spacer(xs);
    }

    &__action {
        align-items: center;
        display: flex;
        flex-wrap: wrap;
        gap: spruce.spacer(s);
        margin-block-start: spruce.spacer(s);
    }
}

